@@ -1,6 +1,6 @@
 package com.example.worldquiz;
 
-import android.content.DialogInterface;
+import  android.content.DialogInterface;
 import android.content.Intent;
 import android.os.Bundle;
 import android.os.CountDownTimer;
@@ -21,8 +21,10 @@ import com.google.android.material.navigation.NavigationView;
 import com.google.android.material.tabs.TabLayout;
 
 import androidx.annotation.NonNull;
+import androidx.annotation.Nullable;
 import androidx.appcompat.app.ActionBarDrawerToggle;
 
+import androidx.constraintlayout.widget.ConstraintLayout;
 import androidx.drawerlayout.widget.DrawerLayout;
 import androidx.appcompat.app.AppCompatActivity;
 import androidx.appcompat.widget.Toolbar;
@@ -37,7 +39,7 @@ public class QuestionActivity extends AppCompatActivity implements NavigationVie
     int time_play = Common.TOTAL_TIME;
     boolean isAnswerModeView = false;
 
-    TextView txt_right_answer,txt_timer;
+    TextView txt_right_answer,txt_timer, txt_wrong_answer;
 
     RecyclerView answer_sheet_view;
     AnswerSheetAdapter answerSheetAdapter;
@@ -95,6 +97,7 @@ public class QuestionActivity extends AppCompatActivity implements NavigationVie
 
 
             viewPager = (ViewPager) findViewById(R.id.viewpaper);
+            viewPager.setOffscreenPageLimit(Common.questionList.size()); // Fixed ViewPager size
             tabLayout = (TabLayout) findViewById(R.id.sliding);
 
             getFragmentList();
@@ -105,10 +108,127 @@ public class QuestionActivity extends AppCompatActivity implements NavigationVie
                     Common.fragmentList);
             viewPager.setAdapter(questionFragmentAdapter);
             tabLayout.setupWithViewPager(viewPager);
+
+            //Event
+            viewPager.addOnPageChangeListener(new ViewPager.OnPageChangeListener() {
+
+                int SCROLLING_RIGHT = 0;
+                int SCROLLING_LEFT = 1;
+                int SCROLLING_UNDERTERMINED = 2;
+
+                int currentScrollingDirection = 2;
+
+                private void setScrollingDirection(float positionOffset) {
+                    if ((1 - positionOffset) >= 0.5)
+                        this.currentScrollingDirection = SCROLLING_RIGHT;
+                    else if ((1 - positionOffset) <= 0.5)
+                        this.currentScrollingDirection = SCROLLING_LEFT;
+                }
+
+                private boolean isScrollingDirectionUndetermined() {
+                    return currentScrollingDirection == SCROLLING_UNDERTERMINED;
+                }
+
+                private boolean isScrollingRight() {
+                    return currentScrollingDirection == SCROLLING_RIGHT;
+                }
+
+                private boolean isScrollingLeft() {
+                    return currentScrollingDirection == SCROLLING_LEFT;
+
+                }
+                @Override
+                public void onPageScrolled(int position, float positionOffset, int positionOffsetPixels) {
+                    if (isScrollingDirectionUndetermined())
+                        setScrollingDirection(positionOffset);
+                }
+
+                @Override
+                public void onPageSelected(int position) {
+                    QuestionFragment questionFragment;
+                    int pos = 0;
+                    if (position > 0) {
+                        if (isScrollingRight()) {   //if user scroll to right, get last fragment and calculate result
+                            questionFragment = Common.fragmentList.get(position - 1);
+                            pos = position - 1;
+                        }
+                        else if (isScrollingLeft()) {//if user scroll to left, get last fragment and calculate result
+                            questionFragment = Common.fragmentList.get(position + 1);
+                            pos = position + 1;
+                        }
+                        else {
+                            questionFragment = Common.fragmentList.get(pos);
+                        }
+                    }
+                    else {
+                        questionFragment = Common.fragmentList.get(0);
+                        pos = 0;
+                    }
+
+                    //Function to show correct answer
+                    CurrentQuestion question_state = questionFragment.getSelectedAnswer();
+                    Common.answerSheetList.set(pos,question_state); //Set question answer for answersheet
+                    answerSheetAdapter.notifyDataSetChanged();  //Change color in answer sheet
+
+                    countCorrectAnswer();
+                    
+                    txt_right_answer.setText(new StringBuilder(String.format("%d",Common.right_answer_count))
+                    .append("/")
+                    .append(String.format("%d",Common.questionList.size())).toString());
+                    txt_wrong_answer.setText(String.valueOf(Common.wrong_answer_count));
+
+                    if (question_state.getType() != Common.ANSWER_TYPE.NO_ANSWER) {
+                        questionFragment.showCorrectAnswer();
+                        questionFragment.disableAnswer();
+                    }
+
+                }
+
+                @Override
+                public void onPageScrollStateChanged(int state) {
+                    if (state == ViewPager.SCROLL_STATE_IDLE)
+                        this.currentScrollingDirection =SCROLLING_UNDERTERMINED;
+                }
+            });
         }
 
 
     }
+
+    private void finishGame() {
+        int pos = viewPager.getCurrentItem();
+        QuestionFragment questionFragment = Common.fragmentList.get(pos);
+        CurrentQuestion question_state = questionFragment.getSelectedAnswer();
+        Common.answerSheetList.set(pos,question_state); //Set question answer for answersheet
+        answerSheetAdapter.notifyDataSetChanged();  //Change color in answer sheet
+
+
+        countCorrectAnswer();
+
+        txt_right_answer.setText(new StringBuilder(String.format("%d",Common.right_answer_count))
+                .append("/")
+                .append(String.format("%d",Common.questionList.size())).toString());
+        txt_wrong_answer.setText(String.valueOf(Common.wrong_answer_count));
+
+        if (question_state.getType() != Common.ANSWER_TYPE.NO_ANSWER) {
+            questionFragment.showCorrectAnswer();
+            questionFragment.disableAnswer();
+        }
+        //Navigating to new Result Activity
+    }
+
+    private void countCorrectAnswer() {
+        //Reset variable
+        Common.right_answer_count = Common.wrong_answer_count = 0;
+        
+        for (CurrentQuestion item:Common.answerSheetList)
+            if (item.getType() == Common.ANSWER_TYPE.RIGHT_ANSWER)
+                Common.right_answer_count++;
+            else if (item.getType() == Common.ANSWER_TYPE.WRONG_ANSWER)
+                Common.wrong_answer_count++;
+        
+    }
+
     //Generating question fragment base on number of item in QuestionList
     private void getFragmentList() {
         for (int i = 0; i<Common.questionList.size(); i++) {
@@ -197,6 +317,16 @@ public class QuestionActivity extends AppCompatActivity implements NavigationVie
     }
 
     @Override
+    public boolean onPrepareOptionsMenu(Menu menu) {
+        MenuItem item = menu.findItem(R.id.menu_wrong_answer);
+        ConstraintLayout constraintLayout = (ConstraintLayout) item.getActionView();
+        txt_wrong_answer = (TextView)constraintLayout.findViewById(R.id.txt_wrong_answer);
+        txt_wrong_answer.setText(String.valueOf(0));
+
+        return true;
+    }
+
+    @Override
     public boolean onCreateOptionsMenu(Menu menu) {
         // Inflate the menu; this adds items to the action bar if it is present.
         getMenuInflater().inflate(R.menu.question, menu);
@@ -206,6 +336,40 @@ public class QuestionActivity extends AppCompatActivity implements NavigationVie
 
     @Override
     public boolean onNavigationItemSelected(@NonNull MenuItem item) {
+
         return false;
     }
+
+    @Override
+    public boolean onOptionsItemSelected(@NonNull MenuItem item) {
+
+        int id = item.getItemId();
+
+        if (id == R.id.menu_finish_game) {
+            if (!isAnswerModeView) {
+                new BottomDialog.Builder(this)
+                        .setTitle("Finished?")
+                        .setIcon(R.drawable.ic_mood_black_24dp)
+                        .setContent("Do you want to submit?")
+                        .setNegativeText("No...")
+                        .onNegative(new BottomDialog.ButtonCallback() {
+                            @Override
+                            public void onClick(@NonNull BottomDialog bottomDialog) {
+                                bottomDialog.dismiss();
+                            }
+                        })
+                        .setPositiveText("Yes!")
+                        .onPositive(new BottomDialog.ButtonCallback() {
+                            @Override
+                            public void onClick(@NonNull BottomDialog bottomDialog) {
+                                bottomDialog.dismiss();
+                                finishGame();
+                            }
+                        }).show();
+            }
+            return true;
+        }
+        return super.onOptionsItemSelected(item);
+    }
+
 }
