@@ -2,8 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/menu_wrong_answer"
+        android:title="Wrong Answer"
+        app:actionLayout="@layout/rectangle_text_view"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/menu_finish_game"
+        android:title="Finish Game"
+        android:icon="@drawable/ic_check_white_24dp"
+        app:showAsAction="always" />
 </menu>
